--- a/1.html
+++ b/1.html
@@ -1,5 +1,6 @@
 <h2>CatPhotoApp</h2>
 <main>
+<a href="https://www.freecatphotoapp.com" target="_blank">cat photos</a>
 <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
    alt="A cute orange cat lying on its back.">
 <p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball
