--- a/1.html
+++ b/1.html
@@ -1,6 +1,6 @@
 <h2>CatPhotoApp</h2>
 <main>
-<p>Click here to view more <a href="#" target="_blank">cat photos</a>.</p>
+<p>Click here to view more <a href="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" target="_blank">cat photos</a>.</p>
 <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
    alt="A cute orange cat lying on its back.">
 <p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball
