--- a/new.html
+++ b/new.html
@@ -15,6 +15,6 @@
    <li>flea treatment</li>
    <li>thunder</li>
    <li>other cats</li>
-   <input type="text">
+   <input type="text" placeholder="cat photo URL">
 </ol>
 </main>
