--- a/new.html
+++ b/new.html
@@ -15,6 +15,8 @@
    <li>flea treatment</li>
    <li>thunder</li>
    <li>other cats</li>
-   <input type="text" placeholder="cat photo URL">
+   <form action="https://www.freecatphotoapp.com/submit-cat-photo">
+      <input type="text" placeholder="cat photo URL">
+   </form>
 </ol>
 </main>
