--- a/new.html
+++ b/new.html
@@ -17,6 +17,7 @@
    <li>other cats</li>
    <form action="https://www.freecatphotoapp.com/submit-cat-photo">
       <input type="text" placeholder="cat photo URL">
+      <button type="submit">Submit</button>
    </form>
 </ol>
 </main>
