--- a/new.html
+++ b/new.html
@@ -16,7 +16,7 @@
    <li>thunder</li>
    <li>other cats</li>
    <form action="https://www.freecatphotoapp.com/submit-cat-photo">
-      <input type="text" placeholder="cat photo URL">
+      <input type="text" placeholder="cat photo URL"  required>
       <button type="submit">Submit</button>
    </form>
 </ol>
