--- a/new.html
+++ b/new.html
@@ -18,6 +18,8 @@
    <form action="https://www.freecatphotoapp.com/submit-cat-photo">
       <input type="text" placeholder="cat photo URL"  required>
       <button type="submit">Submit</button>
+      <label><input type="radio" name="indoor-outdoor">indoor</label>
+      <label><input type="radio" name="indoor-outdoor">outdoor</label>
    </form>
 </ol>
 </main>
